--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,59 @@
 /* 1. VARIABLES DE DISEÑO */
 :root {
   --primary-color: #47b2e4;
+  --btn-color: #a9d100;
   --secondary-color: #6c757d;
   --light-color: #f8f9fa;
-  --dark-color: #343a40;
-  --font-family-base: 'Poppins', sans-serif;
+  --white: #ffffff;
+  --font-family-base: 'Instrument Serif', serif;
+  --font-family-inter: 'Inter', sans-serif;
+  
+
+}
+.tipografia-inter {
+  font-family: var(--font-family-inter);
 }
 
 /* 2. ESTILOS GENERALES */
 body {
   font-family: var(--font-family-base);
   color: #212529;
-  background-color: #ffffff;
+  background-color: #161616;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
 }
+
+.seccion-experimenta {
+  background-color: #1a1a1a; /* o el color que quieras */
+  /* también podés poner una imagen */
+  background-image: url('Assets/HOME.fotos/background.1-08.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.seccion-suscripciones {
+  background-color: #1a1a1a; /* o el color que quieras */
+  /* también podés poner una imagen */
+  background-image: url('Assets/HOME.fotos/background.section-09.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* Cambia el color del texto solo en la sección de planes SUSCRIPCIONES */
+.planes-bg {
+  color: rgb(0, 0, 0);
+}
+
+.planes-bg h2,
+.planes-bg p,
+.planes-bg li,
+.planes-bg h5 {
+  color: rgb(91, 0, 0);
+}
+
 
 /* 3. NAVBAR */
 .navbar {
@@ -25,7 +63,7 @@ body {
 }
 
 .navbar.scrolled {
-  background-color: #fff;
+  background-color: #000000;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
 }
 
@@ -55,46 +93,52 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.2;
 }
 
 h1 {
   font-size: 3rem;
   margin-bottom: 20px;
-  color: var(--dark-color);
+  color: var(--white);
+}
+
+h5 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: var(--white);
 }
 
 p {
   font-size: 1rem;
-  color: #6c757d;
+  color: var(--white);
 }
 
 /* Botones */
 .btn {
-  border-radius: 50px;
+  border-radius: 3px;
   padding: 10px 30px;
   font-weight: 500;
   transition: all 0.3s ease-in-out;
 }
 
 .btn-dark {
-  background-color: var(--primary-color);
+  background-color: var(--btn-color);
   border: none;
 }
 
 .btn-dark:hover {
-  background-color: #369cc5;
+  background-color: #7b9409;
 }
 
 .btn-outline-dark {
-  border: 2px solid var(--primary-color);
-  color: var(--primary-color);
+  border: 2px solid var(--btn-color);
+  color: var(--btn-color);
 }
 
 .btn-outline-dark:hover {
-  background-color: var(--primary-color);
-  color: #fff;
+  background-color: var(--btn-color);
+  color: #000000;
 }
 
 /* 5. SECCIONES */
@@ -106,24 +150,17 @@ section h2 {
   font-size: 2.5rem;
   margin-bottom: 30px;
   position: relative;
-}
-
-section h2::after {
-  content: "";
-  display: block;
-  width: 60px;
-  height: 3px;
-  background: var(--primary-color);
-  margin: 20px auto 0;
+  color: var(--white);
 }
 
 /* 6. CARDS */
 .card {
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.05);
   transition: transform 0.3s;
+  background-color: var(--dark-color);
 }
 
 .card:hover {
@@ -149,7 +186,16 @@ section h2::after {
 }
 
 .card-text {
-  color: #6c757d;
+  color: #ffffff;
+}
+
+.icon-img {
+  width: 140px;         /* ajustá según necesidad */
+  height: 140px;
+  object-fit: contain; /* mantiene proporciones sin deformar */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* 7. TESTIMONIOS */
@@ -167,10 +213,11 @@ form .form-control {
 }
 
 form button.btn-primary {
-  background-color: var(--primary-color);
+  background-color: var(--btn-color);
+  color: #000000;
   border: none;
   width: 100%;
-  border-radius: 50px;
+  border-radius: 0px;
   margin-top: 20px;
 }
 
@@ -207,42 +254,43 @@ img.rounded-circle {
 /* TITULOS */
 .h1-custom {
   font-size: 3rem;
-  font-weight: 700;
+  font-weight: 400;
   line-height: 1.2;
-  color: var(--dark-color);
+  color: var( --white);
 }
 
 .h2-custom {
   font-size: 2.5rem;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.3;
-  color: var(--dark-color);
+  color: var(--white);
 }
 
 .h3-custom {
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.4;
-  color: var(--dark-color);
+  color: var(--white);
 }
 
 .h4-custom {
   font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--dark-color);
+  font-weight: 400;
+  color: var(--white);
 }
+
 
 /* PÁRRAFOS Y TEXTOS */
 .p-custom {
-  font-size: 1rem;
-  color: var(--secondary-color);
+  font-size: 1.3rem;
+  color: var(--white);
   line-height: 1.6;
 }
 
 .lead-custom {
   font-size: 1.25rem;
   font-weight: 400;
-  color: var(--secondary-color);
+  color: var(--white);
 }
 
 /* FONDOS E IMÁGENES */
@@ -275,7 +323,7 @@ img.rounded-circle {
 }
 
 .text-bold {
-  font-weight: 700;
+  font-weight: 400;
 }
 
 .text-muted-custom {
