--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 }
-
+/* SUSCRIPCIÓN STYLES*/
 .seccion-suscripciones {
   background-color: #1a1a1a; /* o el color que quieras */
   /* también podés poner una imagen */
@@ -41,6 +41,13 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.limite-pack {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 .seccion-vinito {
   background-color: #1a1a1a; /* o el color que quieras */
@@ -129,7 +136,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 
