--- a/styles.css
+++ b/styles.css
@@ -264,12 +264,6 @@ section h2 {
   border-radius: 5px;
 }
 
-/* 8. FORMULARIO */
-form .form-control {
-  border-radius: 8px;
-  border: 1px solid #ced4da;
-}
-
 /* BOTONES GENERALES */
 .btn-primary {
   background-color: var(--btn-color);
@@ -375,10 +369,60 @@ form button.btn-primary {
 }
 .accordion-button:not(.collapsed) {
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.15);
-
+}
 
 
                     /*FIN ACCORDION PREGUNTAS */
+
+/* formulario contact */
+.contacto-formulario {
+  color: white;
+
+}
+
+/* Input y textarea personalizados */
+.form-control-custom {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  padding: 0.75rem;
+  width: 100%;
+  font-size: 0.9rem;
+  outline: none;
+}
+
+.form-control-custom::placeholder {
+  color: #ccc;
+  text-transform: uppercase;
+  font-size: 0.85rem;
+}
+
+.form-control-custom:focus {
+  border-color: #c0ff00;
+  box-shadow: 0 0 5px rgba(192, 255, 0, 0.3);
+}
+
+/* Botón lima */
+.btn-lima {
+  background-color: #c0ff00;
+  color: black;
+  font-weight: 500;
+  border: none;
+  text-transform: uppercase;
+  padding: 0.75rem;
+  transition: all 0.3s ease;
+}
+
+.btn-lima:hover {
+  background-color: #d6ff47;
+  color: black;
+}
+
+/* Color lima extra */
+.text-lima {
+  color: #c0ff00;
+}
+
 
 /* 9. FOOTER */
 footer {
