--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
 /* 4. HERO */
 
 .hero-section {
-  background-image: url('Assets/HOME.fotos/web\ hero.png'); /* reemplazá por la ruta real */
+  background-image: url('Assets/HOME.fotos/webhero2-12.png'); /* reemplazá por la ruta real */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
