--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
 .seccion-vinito {
   background-color: #1a1a1a; /* o el color que quieras */
   /* también podés poner una imagen */
-  background-image: url('Assets/HOME.fotos/background.hombreuva-13.png');
+  background-image: url('Assets/HOME.fotos/background.hombreuva2-13.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -119,19 +119,27 @@ body {
   max-height: 40px;
 }
 
+.navbar:not(.scrolled) .nav-link {
+  color: #000; /* negro cuando no está scrolleado */
+}
+
+.navbar.scrolled .nav-link {
+  color: #fff; /* blanco cuando tiene la clase .scrolled */
+}
+
 .nav-link {
-  color: var(--white);
   font-weight: 500;
   margin-left: 20px;
   transition: color 0.3s;
 }
+
 
 .nav-link:hover {
   color: var(--btn-color);
 }
 
 .navbar.scrolled {
-  background-color: #000000;
+  background-color: #161616;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   padding: 5px 0; /* achicás la altura */
 }
@@ -156,6 +164,26 @@ body {
     background-position: center top; /* opcional */
   }
 }
+
+
+
+
+/* SOLO estilos del HERO */
+.hero-section .h1-custom {
+  font-family: 'Instrument Serif', serif;
+  font-size: 4rem;
+  font-weight: 400;
+  color: #2a0505; /* vino tinto */
+}
+
+.hero-section .p-custom {
+  font-family: 'Inter', sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+  color: #2a0505; 
+  line-height: 1.6;
+}
+
 
 
 .row.p-5 {
@@ -198,6 +226,9 @@ p {
 .btn-dark {
   background-color: var(--btn-color);
   border: none;
+  color: #000 !important;
+  font-family: var(--font-family-inter);
+  font-weight: 600;
 }
 
 .btn-dark:hover {
@@ -481,7 +512,7 @@ form button.btn-primary {
   height: 40px;
   border-radius: 50%;
   background-color: #a5e000;
-  color: white;
+  color: rgb(0, 0, 0);
   border: none;
   display: none;
   align-items: center;
